--- a/index.html
+++ b/index.html
@@ -33,4 +33,19 @@
 
   <script src="login.js"></script>
 </body>
-</html>
+  <!-- Version label -->
+  <div class="version-label">v0.01</div>
+  
+  <!-- Info button -->
+  <button class="info-btn" onclick="toggleInfo()">i</button>
+  
+  <!-- Info popup (hidden by default) -->
+<div class="info-popup" id="infoPopup">
+  <h3>ℹ️ Important Notice</h3>
+  <p>
+    This Website is for a <b>Roleplay (RP) server</b> only.<br>
+    It is purely a joke and entertainment purpose.<br>
+    <b>Do NOT take anything here seriously.</b>
+  </p>
+  <button onclick="toggleInfo()">Close</button>
+</div>
