--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,7 @@
       <li onclick="showSection('contracts')">Contracts</li>
       <li onclick="showSection('myContracts')">My Contracts</li>
       <li onclick="showSection('history')">History</li>
+      <li onclick="showSection('leaderboard')">Leaderboard</li>
       <li onclick="showSection('profile')">Profile</li>
     </ul>
   </div>
@@ -30,6 +31,8 @@
     <div id="dashboard" class="section">
       <h1>Welcome to the Criminal Underworld</h1>
       <p class="motto">"Where contracts are signed in blood."</p>
+
+      <!-- Shoutbox -->
       <div class="shoutbox">
         <div id="messages"></div>
         <input type="text" id="messageInput" placeholder="Type your message...">
@@ -55,9 +58,6 @@
         <label>Your In-Game Phone Number</label>
         <input type="text" id="phone" required>
 
-        <label>Your In-Game Bank Number</label>
-        <input type="text" id="bank" required>
-
         <button type="submit" class="contract-btn">Submit Contract</button>
       </form>
 
@@ -76,12 +76,19 @@
       <div id="historyBoard" class="contracts-board"></div>
     </div>
 
-    <!-- PROFILE (Expanded Stats) -->
+    <!-- LEADERBOARD -->
+    <div id="leaderboard" class="section" style="display:none;">
+      <h1>Top Hitmen</h1>
+      <p class="motto">"Only the dead are truly equal, but stats don’t lie."</p>
+      <div id="leaderboardBoard" class="contracts-board"></div>
+    </div>
+
+    <!-- PROFILE -->
     <div id="profile" class="section" style="display:none;">
       <h1>Agent Profile</h1>
       <div class="profile-card">
         <div class="profile-pic-large" id="profilePicLarge"></div>
-        <h2 id="profileName"></h2>
+        <h2 id="profileName">Agent</h2>
 
         <p><b>Rank:</b> <span id="agentRank">Recruit</span></p>
         <p><b>Contracts Completed:</b> <span id="completedCount">0</span></p>
